Robust and Result

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Software\\Anaconda\\envs\\GUI-app\\python.exe"
+    "python.pythonPath": "D:\\Software\\conda\\envs\\MEPsearcher\\python.exe"
 }
