--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\Software\\conda\\envs\\MEPsearcher\\python.exe"
+    "python.pythonPath": "D:\\XinChen-workspace\\anaconda\\python.exe"
 }
